tests/Tuc/Fixtures/errors/NoteWithoutACaller.tuc
tuc parse error test
participants
    GenericService parts

"note without a caller"
